// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsingSideBar renders correctly 1`] = `
<div>
  <section
    aria-labelledby="collapsing-side-bar-:r0:-heading"
    class="css-1k8o0kc-boxStyles-CollapsingSideBar"
  >
    <div
      class="css-1j5n7k8-boxStyles-CollapsingSideBar"
    >
      <div
        class="css-ltihre-boxStyles-CollapsingSideBar"
        id="collapsing-side-bar-:r0:-heading"
      >
        <h2
          class="css-1noh5kt-boxStyles"
        >
          Title
        </h2>
        <span
          class="css-grkhe3-boxStyles"
        >
          Subtitle
        </span>
      </div>
      <button
        aria-controls="collapsing-side-bar-:r0:-body"
        aria-expanded="false"
        aria-label="Title"
        class="css-uzkkkh-BaseButton-boxStyles-CollapsingSideBar"
        type="button"
      >
        <span
          class="css-m1fbv5-boxStyles"
        >
          <span
            class="css-1hxx2pv-boxStyles"
          >
            <span
              class="css-4zmpre-boxStyles"
            >
              Title
            </span>
            <span
              class="css-grkhe3-boxStyles"
            >
              Subtitle
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1wyeviv-CollapsingSideBar"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="css-1j7zknw-CollapsingSideBar"
      id="collapsing-side-bar-:r0:-body"
      style="display: none; height: 0px;"
    >
      <div
        class="css-12ek51e-boxStyles"
      >
        Content
      </div>
    </div>
  </section>
</div>
`;

exports[`CollapsingSideBar renders customTitleElement correctly 1`] = `
<div>
  <section
    aria-labelledby="collapsing-side-bar-:r1:-heading"
    class="css-1k8o0kc-boxStyles-CollapsingSideBar"
  >
    <div
      class="css-1j5n7k8-boxStyles-CollapsingSideBar"
    >
      <div
        class="css-12wi8uf-boxStyles-CollapsingSideBar"
        id="collapsing-side-bar-:r1:-heading"
      >
        <h2>
          Custom Title
        </h2>
      </div>
      <button
        aria-controls="collapsing-side-bar-:r1:-body"
        aria-expanded="false"
        aria-label="Title"
        class="css-uzkkkh-BaseButton-boxStyles-CollapsingSideBar"
        type="button"
      >
        <span
          class="css-m1fbv5-boxStyles"
        >
          <span
            class="css-1hxx2pv-boxStyles"
          >
            <span
              class="css-4zmpre-boxStyles"
            >
              Title
            </span>
            <span
              class="css-grkhe3-boxStyles"
            >
              Subtitle
            </span>
          </span>
          <svg
            aria-hidden="true"
            class="css-1wyeviv-CollapsingSideBar"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="css-1j7zknw-CollapsingSideBar"
      id="collapsing-side-bar-:r1:-body"
      style="display: none; height: 0px;"
    >
      <div
        class="css-12ek51e-boxStyles"
      >
        Content
      </div>
    </div>
  </section>
</div>
`;
